Fixed formatting of cards and scrollbars

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,14 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-
-.background-linear{
-
-  background: linear-gradient(180deg, rgba(41, 40, 40, 0.85) 0%, rgb(0, 0, 0) 100%);
+.background-linear {
+  background: linear-gradient(
+    180deg,
+    rgba(41, 40, 40, 0.85) 0%,
+    rgb(0, 0, 0) 100%
+  );
 }
 
 ::-webkit-scrollbar {
-  width: 15px;
+  width: 10px;
 }
 
 ::-webkit-scrollbar-track {
@@ -19,8 +21,8 @@
 ::-webkit-scrollbar-thumb {
   background-color: #857fff;
 
-  border-radius: 20px;
-  border: 6px solid transparent;
+  border-radius: 10px;
+  border: 5px solid transparent;
   background-clip: content-box;
 }
 
